@@ -1,3 +1,7 @@
+* Mon Nov 24 2003 <gerbier@users.sourceforge.net> 1.4.6-1
+- added -P/--autoprovide flag
+- added -R/--autorequire flag
+
 * Wed Nov 19 2003 <gerbier@users.sourceforge.net> 1.4.5-2
 - change filter behavior to be more robust
 - read -r on /etc/popt to keep backslash
